class Players:
    RED_PLAYER = 'X'
    BLACK_PLAYER = 'O'
    DRAW = 'D'
