@startuml Proyect
class GameControll {
    +model : GameBase
    +view : GameView
    run_game()
}

class Board {
    +high : int
    +width : int
    +mat : matrix
    create_board()
    get_cell()   
    update_cell()
    score()
    print_board(): 
}

class GameBase {
    {static} directions : list
    +high : int
    +width : int
    +file_path : str
    make_file()
    is_valid_move() 
    place_piece()
    is_out_of_range()
    is_terminated()
    change_turn()
    select_winner()  
    can_move()
    ai_move()
    choose_move()
    minimax()
    valid_moves()  
}

class Game {
    {static} directions : list
    +high : int
    +width : int
    +board : Board
    +file_path : str
    make_file()
    is_valid_move() 
    place_piece()
    is_out_of_range()
    is_terminated()
    change_turn()
    select_winner()    
    ai_move()
    choose_move()
    minimax()
    valid_moves()  
}


class GameFile {
    +board : Board
    +file_path : str
    +winner : str
    game_file()
}

class Players {
    +RED_PLAYER : str
    +BLACK_PLAYER : str
    +DRAW : str
}

class BoardConsoleView {
    +board : str
    display_board()
}

class BoardView {
    +board : Board
    {abstract} display_board()
}

class GameConsoleView {
    +game : str
    +boardview : BoardConsoleView
    display_board()   
    welcome_msg()   
    win_msg()    
    your_turn_msg()   
    invalid_place()
    get_position()   
    display_score()
    not_move_msg()
    game_mode()
    select_dif()
}

class GameView {
    +game : Game
    {abstract} welcome_msg()
    {abstract} win_msg()
    {abstract} your_turn_msg()
    {abstract} not_move_msg()
    {abstract} invalid_place()
    {abstract} get_position()
    {abstract} display_score()
    {abstract} display_board()
    {abstract} game_mode()
    {abstract} select_dif()
}

GameView <|-- GameConsoleView
Game *-- GameView

BoardView <|-- BoardConsoleView
Board *-- BoardView

GameBase <|-- Game

Players o-- GameConsoleView
BoardConsoleView *-- GameConsoleView

Game *-- GameControll
Players *-- GameControll
GameConsoleView *-- GameControll

Players o-- Board

Players *-- Game
Board *-- Game
GameFile *-- Game

Board *-- GameFile
Players o-- GameFile


@enduml